fix: search field wrap fix

--- a/src/components/organisms/searchField/searchField.module.scss
+++ b/src/components/organisms/searchField/searchField.module.scss
@@ -2,7 +2,9 @@
 
 .form {
 	display: flex;
-	flex-direction: inherit;
+	flex-flow: inherit;
+    justify-content: center;
+	margin-bottom: 1.2rem;
 
 	:global {
 		.ant-btn {
@@ -27,4 +29,10 @@
 
 .titleRow {
 	margin-top: 1.2rem;
+}
+
+@media (max-width: 768px) {
+	.form {
+		flex-flow: wrap;
+	}
 }
